macOS/JDK 25: build handbook, build scripts, and the JDK-25 GUI fix
Validated the JDK 17 -> 25 upgrade end-to-end (compiles + links, CLI, and
GUI graphics all work) and consolidated the macOS build/run knowledge.

- modules/jvm/.../LibraryPath.java: fix java.library.path patching for JDK 18+.
  JEP 416 blocks reflective writes to static final fields
  (UnsupportedOperationException: set), so the GUI could not load gluegen_rt.
  Write NativeLibraries$LibraryPaths.USER_PATHS via Unsafe, graceful fallback.
  The one genuine JDK-25 source incompatibility.
- build-macos.sh: one-command build (configure + the build-time Makefile fixes
  the stale generated tree needs: OpenMP -Xpreprocessor, helptools disable stub,
  spreadsheet-only C++20, then make).
- reapply-macos-fixes.sh: rebuild ALL macros after the binary/dylib fixes (the
  in-make macro build runs too early and corrupts core/macros/lib); on JDK 25.
- docs/building/macos.md: rewritten as the complete macOS build/run handbook.
- docs/design/terminal-live-reload.md: Phase-1 terminal spike results.
- .gitignore: ignore terminal-spike/ (verified spike scratch).

[skip ci]

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>